# buddhabrot

./: Cargo.toml  DESIGN.md  README.md
src/: app.rs  cli.rs  composer.rs  gizmo.rs  input.rs  main.rs  metadata.rs  onion.rs  orbit.rs  overlay.rs  palette.rs  render.rs  rotation_interp.rs  sampler.rs  savepng.rs  session.rs  timeline_save.rs  videorender.rs  view.rs  zoompan.rs
