[package]
name = "buddhabrot"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
fontdue = "0.9"
parking_lot = "0.12"
png = "0.17"
trash = "5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[profile.dev]
opt-level = 2
